; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_backref.c_inode_ref_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_backref.c_inode_ref_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_root = type { i32 }
%struct.btrfs_path = type { i32 }
%struct.btrfs_key = type { i32 }

@BTRFS_INODE_REF_KEY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, %struct.btrfs_root*, %struct.btrfs_path*, %struct.btrfs_key*)* @inode_ref_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inode_ref_info(i32 %0, i32 %1, %struct.btrfs_root* %2, %struct.btrfs_path* %3, %struct.btrfs_key* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.btrfs_root*, align 8
  %9 = alloca %struct.btrfs_path*, align 8
  %10 = alloca %struct.btrfs_key*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store %struct.btrfs_root* %2, %struct.btrfs_root** %8, align 8
  store %struct.btrfs_path* %3, %struct.btrfs_path** %9, align 8
  store %struct.btrfs_key* %4, %struct.btrfs_key** %10, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @BTRFS_INODE_REF_KEY, align 4
  %14 = load %struct.btrfs_root*, %struct.btrfs_root** %8, align 8
  %15 = load %struct.btrfs_path*, %struct.btrfs_path** %9, align 8
  %16 = load %struct.btrfs_key*, %struct.btrfs_key** %10, align 8
  %17 = call i32 @__inode_info(i32 %11, i32 %12, i32 %13, %struct.btrfs_root* %14, %struct.btrfs_path* %15, %struct.btrfs_key* %16)
  ret i32 %17
}

declare dso_local i32 @__inode_info(i32, i32, i32, %struct.btrfs_root*, %struct.btrfs_path*, %struct.btrfs_key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
